test/wildcardVecSplit4.slq

def main(){
	(x:_^2)~(y:_^2):=(1,2,3); /// error
	return (x,y);
}
